On UNIX, make use of a pty process instead of a normal process, as unrar opens pty connections for getting passwords. In other cases, when getting password requests via stderr, just kill the process and return with a failure code: the proper solution would be handling the password request, but this is a non-trivial task that require some more work.

Thus, for now, just do not allow password-protected RARs to be opened.
BUG: 165596

svn path=/trunk/KDE/kdegraphics/okular/; revision=828998